Fixed the white-space:nowrap for #livesearch0 and changed it to white-space:normal so the div wont pop out the livesearchcontainer anymore
git-svn-id: https://svn.syslab.com/svn/syslabcom/recensio.theme/trunk@5362 51ee9ba4-e84d-4896-84de-354f1821c169

--- a/recensio/theme/skins/recensio_theme/screen.css
+++ b/recensio/theme/skins/recensio_theme/screen.css
@@ -310,6 +310,9 @@ padding-left:0em;
 }
 
 /* To adjust the width of the livesearch container I have to add some extra styles to it. */
+#livesearch0 {
+  white-space:normal!important;  
+}
 
 ul.LSTable {
    width:180px; 
